@@ -27,16 +27,17 @@ Set values:
 The current online working directory is accessible via a method. It is created
 on the fly, when it does not exist:
 
->>> collection = settings.get_working_directory(('online',))
+>>> collection = settings.get_working_directory('online/$year/$volume/foo')
 >>> collection.uniqueId
-u'http://xml.zeit.de/online/2004/21'
+u'http://xml.zeit.de/online/2004/21/foo'
 
 Make sure getting the collection does also work when it alreay exists of
 course:
 
->>> collection = settings.get_working_directory(('online',))
+>>> collection = settings.get_working_directory('online/$year/$volume/foo')
 >>> collection.uniqueId
-u'http://xml.zeit.de/online/2004/21'
+u'http://xml.zeit.de/online/2004/21/foo'
+
 
 It is possible to adapt every located object to the settings:
 
